--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -207,7 +207,7 @@
             <div class="header">
                 <div class="blog-title">{{ site.title }}</div>
                 <div class="author-info">{{ site.author }}</div>
-                <div class="affiliation">Autidadacta.</div>
+                <div class="affiliation">Autidadacta</div>
             </div>
 
             <div class="nav-menu">
