afiliados en default

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -368,7 +368,7 @@
             <div class="header">
                 <div class="blog-title">{{ site.title }}</div>
                 <div class="author-info">{{ site.author }}</div>
-                <div class="affiliation">Universidad Nacional • Departamento de Ciencias</div>
+                <div class="affiliation">Autodidacta</div>
             </div>
 
             <div class="nav-menu">
